fixed build issue fixed test issue added Junit6